--- a/spinwheelapp/templates/spin.html
+++ b/spinwheelapp/templates/spin.html
@@ -285,13 +285,13 @@
 
         .segment-label {
             position: absolute;
-            top: 39%;
-            left: 46%;
+            top: 38%;
+            left: 47%;
             transform-origin: center;
             transform: rotate(var(--angle)) translateY(-120px);
             writing-mode: vertical-rl;
             text-orientation: mixed;
-            font-size: 11px;
+            font-size: 10px;
             font-weight: 600;
             color: rgb(242, 228, 228);
             text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
@@ -301,7 +301,7 @@
             transition: all 0.3s ease;
             padding: 5px;
             border-radius: 4px;
-            backdrop-filter: blur(2px);
+            /* backdrop-filter: blur(2px); */
             z-index: 1;
         }
 
